--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                             <a href = "index.html" class = "nav-link text-light">Home</a>
                         </li>
                         <li class = "nav-item">
-                            <a href = "entertainment.html" class = "nav-link text-light">About</a>
+                            <a href = "about.html" class = "nav-link text-light">About</a>
                         </li>
                         <li class = "nav-item">
-                            <a href ="food.html" class="nav-link text-light">Projects</a>
+                            <a href ="projects.html" class="nav-link text-light">Projects</a>
                         </li> <li class ="nav-item">
-                            <a href = "weather.html" class = "nav-link text-light">Social</a>
+                            <a href = "#" class = "nav-link text-light">Social</a>
                         </li>
                         <li class = "nav-item">
-                            <a href = "favorites.html" class = "nav-link text-light">Contact</a>
+                            <a href = "#" class = "nav-link text-light">Contact</a>
                         </li>
                     </ul>
                 </div>
