--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                            <a href = "#" class = "nav-link text-light">Social</a>
                        </li>
                        <li class = "nav-item">
-                           <a href = "#" class = "nav-link text-light">Contact</a>
+                           <a href = "contact.html" class = "nav-link text-light">Contact</a>
                        </li>
                    </ul>
                </div>
