Corrections made to home-page styling

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                      elegant website design. 
                     </p>
                     
-                    <button class = "btn btn-transparent">Learn More</button>
+                    <button onclick="window.location.href='projects.html';" class = "btn btn-transparent">Learn More</button>
 
                 </div>
             </div>
-            <div class="col-4">
-                <h4 class="position-absolute top-0 end-10">Adventure Planner</h4>
+            <div class="card1">
+                <h3 class="stargazer-header">Adventure Planner Project</h3>
 
-                <div class="card1 position-absolute top-0 d-flex justify-content-end">
+                <div>
                     <a href="https://charlocc.github.io/activityplanner/">
-                   <img src="https://images.pexels.com/photos/42148/pexels-photo-42148.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" 
-                   alt="" style = "width:60%" class = "rounded">
+                   <img class = "stargazer" src="https://images.pexels.com/photos/42148/pexels-photo-42148.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" 
+                   alt=""  class = "rounded">
                    </a>
                     
                 </div>
