Correcting projects page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="content conatiner">
             <div class="outer row">
-                <div class="inner col-8">
+                <div class="inner">
                     <h2>Deliver A Better Experience</h2>
                     <h3>To Your Customers</h3>
                     <p>Welcome to Gerardo Sanchez Web Services. Gerardo is a passionate and skilled 
@@ -76,6 +76,7 @@
                     
                 </div>
             </div>
+       
 
         </div>
 
