--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <script>
         document.getElementById("video").playbackRate = .6;
     </script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 </body>
 </html>
