made main page scrollable

--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
 
                 </div>
             </div>
+            <h3 class="stargazer-header">Adventure Planner</h3>
+
             <div class="card1">
-                <h3 class="stargazer-header">Adventure Planner</h3>
 
                 <div>
-                    <a href="https://charlocc.github.io/activityplanner/">
+                    <!-- <a href="https://charlocc.github.io/activityplanner/">
                    <img class = "stargazer" src="https://images.pexels.com/photos/42148/pexels-photo-42148.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" 
                    alt=""  class = "rounded">
-                   </a>
+                   </a> -->
                     
                 </div>
             </div>
