--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h2>Deliver A Better <span class = 'span1'> Experience </span></h2>
                     <h3>To Your Customers</h3>
                     <p>Welcome to Gerardo Sanchez Web Services. Gerardo is a passionate and skilled 
-                    web-developer with experience building fast applications with responsive designs that engages users with practical, 
+                    web-developer with experience building fast applications with responsive designs that engage users with practical, 
                     elegant web <span class = 'span2'> experiences</span>. 
                     </p>
                     
