Repaired broken links

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                        <li class = "nav-item">
                            <a href ="projects.html" class="nav-link text-light">Projects</a>
                        </li> <li class ="nav-item">
-                           <a href = "#" class = "nav-link text-light">Social</a>
+                           <a href = "social.html" class = "nav-link text-light">Social</a>
                        </li>
                        <li class = "nav-item">
                            <a href = "contact.html" class = "nav-link text-light">Contact</a>
