Added resume link

--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
                 <li style = "text-decoration: none;"><h1 class = "blurb"> <a href="https://www.linkedin.com/in/gerardo-sanchez-529759214/" target = "_blank"> <i class="bi bi-linkedin"></i> </a></h1></li>
                 <li style = "text-decoration: none;"><h1 class = "blurb"> <a href="https://twitter.com/Gerardo21370810"> <i class="bi bi-twitter"></i></a></h1></li>
                 <li style = "text-decoration: none;"><h1 class = "blurb"> <a href="https://github.com/oracle942" target = "_blank"> <i class="bi bi-github"></i></a></h1></li>
+                <li style = "text-decoration: none;"><h1 class = "blurb"> <a href="https://docs.google.com/document/d/1OwzZzqCRPQMq6j-6Fw8D2yg2M_-q08pFZO61wNdNMvA/edit?usp=sharing" target = "_blank"> <i class="bi bi-file-person"></i></a></h1></li>
             </ul>       
         </div>
 
