--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                 You can navigate this website 
                 to find samples of my work. 
             </p>
-            <img class = "headshot" src="12208124_10206842070903920_1145603890_n.jpg" alt="">
+            <img class = "headshot" src="IMG_E3942.JPG" alt="">
             
         </div>
         
