Modified landing page

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             <div class="outer row">
                 <div class="inner">
                     <h2>Deliver A Better <span class = 'span1'> Experience </span></h2>
-                    <h3>To Your Customers</h3>
-                    <p>Welcome to Gerardo Sanchez Web Services. Gerardo is a passionate and skilled 
+                    <h3 class ="customers">To Your Customers</h3>
+                    <!-- <p>Welcome to Gerardo Sanchez Web Services. Gerardo is a passionate and skilled 
                     web-developer with experience building fast applications and responsive designs that engage users with practical, 
                     elegant web <span class = 'span2'> experiences</span>. 
-                    </p>
+                    </p> -->
                     <button onclick="window.location.href='about.html';" class = "btn btn-transparent">Learn More</button>
 
                 </div>
