Removed commented code. Updated Readme.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -94,36 +94,29 @@
         </h1>
         <div class="row project-row w-100">
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin0">
-            <img src="https://images.pexels.com/photos/417045/pexels-photo-417045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic pro0" /><span class="pic-title">Weather Dashboard</span>
+            <img src="https://images.pexels.com/photos/417045/pexels-photo-417045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Weather Dashboard</span>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin1">
-            <img src="https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic pro1" /><span class="pic-title">Password Generator</span>
+            <img src="https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Password Generator</span>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin2">
-            <img src="https://images.pexels.com/photos/1714208/pexels-photo-1714208.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic pro2" /><span class="pic-title">Tech Blog</span>
+            <img src="https://images.pexels.com/photos/1714208/pexels-photo-1714208.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Tech Blog</span>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin3">
-            <img src="https://images.pexels.com/photos/1157399/pexels-photo-1157399.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic pro2" /><span class="pic-title">Adventure Planner</span>
+            <img src="https://images.pexels.com/photos/1157399/pexels-photo-1157399.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Adventure Planner</span>
           </div> 
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin4">
-            <img src="https://images.pexels.com/photos/7567481/pexels-photo-7567481.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic pro4" /><span class="pic-title">Work-Day Scheduler</span>
+            <img src="https://images.pexels.com/photos/7567481/pexels-photo-7567481.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Work-Day Scheduler</span>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin5">
-            <img src="https://images.pexels.com/photos/4498452/pexels-photo-4498452.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic pro5" /><span class="pic-title">Workout Tracker</span>
+            <img src="https://images.pexels.com/photos/4498452/pexels-photo-4498452.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Workout Tracker</span>
           </div>
         </div>
       </div>
     </div>
     <!-- End Main -->
 
-    <!-- <footer>
-                    <ul class="footer">
-                        <i class="fab fa-facebook-f"></i>
-                        <li><a href="#"><img width= "25" height= "25" src="./assets/media/twitter.png" alt="twitter"></a></li>
-                        <li><a href="#"><img width= "25" height= "25" src="./assets/media/instagram.png" alt="instagram"></a></li>
-                    </ul>
-                    <h4>GSWS LLC</h4>
-                </footer> -->
+
 
     <script>
       document.getElementById('video').playbackRate = 0.6;
