Hover effect modification

--- a/pages/about.html
+++ b/pages/about.html
@@ -94,7 +94,7 @@
             WELCOME
         </h1>
       <p class="blurb">
-        Welcome to my portfolio page. My name is Gerardo Sanchez and I am
+        Welcome to my portfolio page. My name is Gerardo Sanchez. I am
         passionate about creating memorable user expriences on the web.
         <br />
         You can navigate this website to find samples of my work.
