--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
 
       <div class="content">
         <div class="inner">
+          <div class="headline-wrapper">
           <h1 class="headline deliver">DELIVER A SUPERIOR</h1>
           <h1 class="headline experience">WEB EXPERIENCE</h1>
+        </div>
           <div class="button-container">
             <a href="./pages/about.html" class="button">
               <svg>
