--- a/pages/contact.html
+++ b/pages/contact.html
@@ -91,7 +91,7 @@
 
 
       <div class="contact">
-        <h1 class="coming-soon">CONTACT</h1>
+        <h1 class="header">CONTACT</h1>
         <div class="icons">
           <a href="https://oracle942.github.io/Web-Dev-Portfolio/" target = "_blank"> <i class="bi bi-linkedin"></i></a>
           <a href="https://github.com/oracle942" target = "_blank"><i class="bi bi-github"></i></a>
