Added carousel and sections to About section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./style/buttons.css" />
     <link rel="stylesheet" href="./style/logo.css" />
     <link rel="stylesheet" href="./style/style.css" />
-    <title>Sanchez Web Services</title>
+    <title>Sanchez Web Solutions</title>
   </head>
   <body>
     <div class="main">
@@ -26,7 +26,7 @@
               <rect id="shape" />
               <foreignObject class="node">
                 <a href="index.html" class="navbar-brand text-light">
-                  Sanchez Web Services
+                  Sanchez Web Solutions
                 </a>
               </foreignObject>
             </svg>
