--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../style/logo.css" />
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/projects.css" />
-    <title>Sanchez Web Services</title>
+    <title>Sanchez Web Solutions</title>
   </head>
   <body>
     <div class="data-main">
@@ -27,7 +27,7 @@
               <rect id="shape" />
               <foreignObject class="node">
                 <a href="../index.html" class="navbar-brand text-light">
-                  Sanchez Web Services
+                  Sanchez Web Solutions
                 </a>
               </foreignObject>
             </svg>
@@ -94,22 +94,22 @@
         </h1>
         <div class="row project-row w-100">
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin0">
-            <img src="https://images.pexels.com/photos/417045/pexels-photo-417045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Weather Dashboard</span>
+            <a href="https://oracle942.github.io/weather-dashboard/" target="_blank"><img src="https://images.pexels.com/photos/417045/pexels-photo-417045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic0" /></a><span class="pic-title0">Weather Dashboard</span>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin1">
-            <img src="https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Password Generator</span>
+            <a href="https://oracle942.github.io/password-generator/" target="_blank"><img src="https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /></a><span class="pic-title">Password Generator</span>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin2">
-            <img src="https://images.pexels.com/photos/1714208/pexels-photo-1714208.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Tech Blog</span>
+            <a href="https://gs-tech-blog.herokuapp.com/" target="_blank"><img src="https://images.pexels.com/photos/1714208/pexels-photo-1714208.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /></a><span class="pic-title">Tech Blog</span>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin3">
-            <img src="https://images.pexels.com/photos/1157399/pexels-photo-1157399.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Adventure Planner</span>
+            <a href="https://oracle942.github.io/activityplanner/" target="_blank"><img src="https://images.pexels.com/photos/1157399/pexels-photo-1157399.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /></a><span class="pic-title">Adventure Planner</span>
           </div> 
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin4">
-            <img src="https://images.pexels.com/photos/7567481/pexels-photo-7567481.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Work-Day Scheduler</span>
+            <a href="https://oracle942.github.io/work-day-scheduler/" target="_blank"><img src="https://images.pexels.com/photos/7567481/pexels-photo-7567481.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /></a><span class="pic-title">Work-Day Scheduler</span>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 mt-3 margin5">
-            <img src="https://images.pexels.com/photos/4498452/pexels-photo-4498452.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /><span class="pic-title">Workout Tracker</span>
+            <a href=" https://gls-workout-tracker.herokuapp.com/" target="_blank"><img src="https://images.pexels.com/photos/4498452/pexels-photo-4498452.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="pic" /></a><span class="pic-title">Workout Tracker</span>
           </div>
         </div>
       </div>
