--- a/pages/about.html
+++ b/pages/about.html
@@ -7,14 +7,13 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../style/aboutstyle.css" />
     <link rel="stylesheet" href="../style/buttons.css" />
     <link rel="stylesheet" href="../style/logo.css" />
+    <link rel="stylesheet" href="../style/carousel.css" />
     <link rel="stylesheet" href="../style/style.css" />
-    <title>Sanchez Web Services</title>
+    <title>Sanchez Web Solutions</title>
   </head>
   <body>
     <div class="data-main">
@@ -27,7 +26,7 @@
               <rect id="shape" />
               <foreignObject class="node">
                 <a href="../index.html" class="navbar-brand text-light">
-                  Sanchez Web Services
+                  Sanchez Web Solutions
                 </a>
               </foreignObject>
             </svg>
@@ -46,7 +45,9 @@
           <div class="collapse navbar-collapse" id="navbarMenu">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a href="../index.html" class="nav-link from-left btn text-light"
+                <a
+                  href="../index.html"
+                  class="nav-link from-left btn text-light"
                   >Home</a
                 >
               </li>
@@ -79,7 +80,7 @@
       </nav>
 
       <video
-      class="data-video"
+        class="data-video"
         src="../media/video (3).mp4"
         style="object-position: center"
         id="video"
@@ -88,31 +89,165 @@
         autoplay
       ></video>
 
-
       <div class="about">
-        <h1 class="welcome">
-            WELCOME
-        </h1>
-      <p class="blurb">
-        Welcome to my portfolio page. My name is Gerardo Sanchez. I am
-        passionate about creating memorable user expriences on the web.
-        <br />
-        You can navigate this website to find samples of my work.
-      </p>
-    </div>
-     
+        <h1 class="welcome">MODERN WEB-DEVELOPMENT. DELIVERED.</h1>
+        <p class="blurb">BUILD THE WEB YOU WANT</p>
+        <p class="services">SERVICES</p>
 
-     
+        <div class="container">
+          <input type="radio" name="slider" id="item-1" checked />
+          <input type="radio" name="slider" id="item-2" />
+          <input type="radio" name="slider" id="item-3" />
+          <div class="cards">
+            <label class="card" for="item-1" id="card1">
+              <h1 class="card-header1">FRONT-END DESIGN</h1>
+              <img
+                src="https://images.unsplash.com/photo-1515462277126-2dd0c162007a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=688&q=80"
+              />
+            </label>
+            <label class="card" for="item-2" id="card2">
+              <h1 class="card-header2">BACK-END ARCHITECTURE</h1>
+              <img src="../media/photo-1482053450283-3e0b78b09a70.jpg" />
+            </label>
+            <label class="card" for="item-3" id="card3">
+              <h1 class="card-header3">COMPLETE SOLUTIONS</h1>
+              <img
+                src="https://images.unsplash.com/photo-1431576901776-e539bd916ba2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"
+              />
+            </label>
+          </div>
+        </div>
+        <div class="services-section fe-section">
+          <div class="fe-content">
+            <h1 class="fe-header">FRONT-END DESIGN</h1>
+            <p class="fe-blurb">
+              Providing bespoke user-focused modern UI/UX design. 
+              Responsive mobile-first, fully interactive websites built using
+              the latest languages, tools, and frameworks. Memorable user-experiences
+              to build client relationships and drive key metrics. 
+            </p>
+
+            <h2 class="fe-tech">TECHNOLOGIES</h2>
+            <div class="container-fluid pt-5">
+              <div
+                class="row fe-logos d-flex justify-content-center align-items-center sm-6 md-4 lg3"
+              >
+                <img src="../logos/html.png" class="pic0 col" style="margin-right: -80px"/>
+                <img src="../logos/css.png" class="pic col" />
+                <img src="../logos/js.png" class="pic1 col" style="margin: 40px 50px 0 0" />
+                <img
+                  src="../logos/react2.png"
+                  class="pic1 col"
+                  style="margin: -30px; max-width: 300px"
+                />
+                <img src="../logos/jquery0.png" class="pic1 col" style="margin: 0 0 0 30px"/>
+                <img src="../logos/bootstrap.jpg" class="pic col" />
+                <img
+                  src="../logos/figma.png"
+                  class="pic col"
+                  style="margin: -40px"
+                />
+                <img src="../logos/material.png" class="pic col" />
+                <img src="../logos/handlebars.png" class="col pic" style="margin-left: 30px;" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="be-services-section be-section">
+          <div class="fe-content">
+            <h1 class="fe-header">BACK-END ARCHITECTURE</h1>
+            <p class="cs-blurb">
+              Providing full-featured Express.js server integration for seamless data retrieval and delivery, and  
+              sophisticated database architecture using RDBMS or NoSQL models for optimized data-storage. 
+              User accounts, authentication, unit-testing, custom APIs, password encryption, and cookie management.
+            </p>
+
+            <h2 class="fe-tech">TECHNOLOGIES</h2>
+            <div class="container-fluid pt-5">
+              <div
+                class="row fe-logos d-flex justify-content-center align-items-center sm-12 md-6"
+              >
+                <img src="../logos/node-js-icon.png" class="pic col" />
+                <img src="../logos/express1.png" class="pic col" />
+                <img
+                  src="../logos/mysql.png"
+                  class="pic col"
+                />
+                <img src="../logos/mongo1.png" class="pic0 col"/>
+                <img src="../logos/npm.png" class="col pic" />
+                <img src="../logos/json1.png" class="pic col" />
+                <img
+                  src="../logos/apollo.png"
+                  class="pic0 col"
+                  style="margin: -40px"
+                />
+                <img src="../logos/axios.png" class="pic col" />
+                <img src="../logos/graph.png" class="col pic0" />
+                <img src="../logos/jest.png" class="pic1 col" />
+                <img src="../logos/wta.png" class="col pic" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="services-section cs-section">
+          <div class="fe-content">
+            <h1 class="fe-header">COMPLETE SOLUTIONS</h1>
+            <p class="fe-blurb">
+              Providing full-stack front-end/back-end integration and application deployment. 
+            </p>
+
+            <h2 class="fe-tech">TECHNOLOGIES</h2>
+            <div class="container-fluid pt-5">
+              <div
+                class="row fe-logos d-flex justify-content-center align-items-center sm-12 md-6"
+              >
+                <img src="../logos/heroku.png" class="pic0 col" style="margin: -50px 0 0 -50px; max-height: 200" />
+                <img src="../logos/mern.png" class="pic0 col" style="margin-top: -50px"/>
+                <img
+                  src="../logos/git.png"
+                  class="pic1 col"
+                  style="margin: -30px; max-width: 500px"
+                />
+                <img src="../logos/github.png" class="pic col"/>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- End Main -->
 
-
-
     <script>
       document.getElementById('video').playbackRate = 0.6;
+      let fe = document.querySelector('#card1');
+      let be = document.querySelector('#card2');
+      let cs = document.querySelector('#card3');
+      const festyle = getComputedStyle(fe);
+      const bestyle = getComputedStyle(be);
+      const csstyle = getComputedStyle(cs);
+
+      let feSection = document.querySelector('.fe-section');
+      let beSection = document.querySelector('.be-section');
+      let csSection = document.querySelector('.cs-section');
+
+      fe.addEventListener('click', function () {
+        if (festyle.opacity === '1') {
+          feSection.scrollIntoView(true);
+        }
+      });
+      be.addEventListener('click', function () {
+        if (bestyle.opacity === '1') {
+          beSection.scrollIntoView(true);
+        }
+      });
+      cs.addEventListener('click', function () {
+        if (csstyle.opacity === '1') {
+          csSection.scrollIntoView(true);
+        }
+      });
     </script>
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   </body>
