--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../style/logo.css" />
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    <title>Sanchez Web Services</title>
+    <title>Sanchez Web Solutions</title>
   </head>
   <body>
     <div class="data-main">
@@ -28,7 +28,7 @@
               <rect id="shape" />
               <foreignObject class="node">
                 <a href="../index.html" class="navbar-brand text-light">
-                  Sanchez Web Services
+                  Sanchez Web Solutions
                 </a>
               </foreignObject>
             </svg>
