Updated About section

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../style/logo.css" />
     <link rel="stylesheet" href="../style/carousel.css" />
     <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../style/contactbtn.css" />
     <title>Sanchez Web Solutions</title>
   </head>
   <body>
@@ -90,7 +91,7 @@
       ></video>
 
       <div class="about">
-        <h1 class="welcome">MODERN WEB-DEVELOPMENT. DELIVERED.</h1>
+        <h1 class="welcome">MODERN WEB DEVELOPMENT. DELIVERED.</h1>
         <p class="blurb">BUILD THE WEB YOU WANT</p>
         <p class="services">SERVICES</p>
 
@@ -100,13 +101,13 @@
           <input type="radio" name="slider" id="item-3" />
           <div class="cards">
             <label class="card" for="item-1" id="card1">
-              <h1 class="card-header1">FRONT-END DESIGN</h1>
+              <h1 class="card-header1">UI/UX DESIGN</h1>
               <img
                 src="https://images.unsplash.com/photo-1515462277126-2dd0c162007a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=688&q=80"
               />
             </label>
             <label class="card" for="item-2" id="card2">
-              <h1 class="card-header2">BACK-END ARCHITECTURE</h1>
+              <h1 class="card-header2">SERVER-SIDE ARCHITECTURE</h1>
               <img src="../media/photo-1482053450283-3e0b78b09a70.jpg" />
             </label>
             <label class="card" for="item-3" id="card3">
@@ -119,61 +120,95 @@
         </div>
         <div class="services-section fe-section">
           <div class="fe-content">
-            <h1 class="fe-header">FRONT-END DESIGN</h1>
+            <h1 class="fe-header">UI/UX DESIGN</h1>
             <p class="fe-blurb">
-              Providing bespoke user-focused modern UI/UX design. 
-              Responsive mobile-first, fully interactive websites built using
-              the latest languages, tools, and frameworks. Memorable user-experiences
-              to build client relationships and drive key metrics. 
+              Providing bespoke user-focused modern UI/UX design. Responsive
+              mobile-first, fully interactive web applications built using powerful
+              languages, and the best tools and frameworks. Memorable
+              user-experiences to build client relationships and drive key
+              metrics.
             </p>
 
             <h2 class="fe-tech">TECHNOLOGIES</h2>
             <div class="container-fluid pt-5">
               <div
-                class="row fe-logos d-flex justify-content-center align-items-center sm-6 md-4 lg3"
+                class="
+                  row
+                  fe-logos
+                  d-flex
+                  justify-content-center
+                  align-items-center
+                  sm-6
+                  md-4
+                  lg3
+                "
               >
-                <img src="../logos/html.png" class="pic0 col" style="margin-right: -80px"/>
+                <img
+                  src="../logos/html.png"
+                  class="pic0 col"
+                  style="margin-right: -80px"
+                />
                 <img src="../logos/css.png" class="pic col" />
-                <img src="../logos/js.png" class="pic1 col" style="margin: 40px 50px 0 0" />
+                <img
+                  src="../logos/js.png"
+                  class="pic1 col"
+                  style="margin: 40px 50px 0 0"
+                />
                 <img
                   src="../logos/react2.png"
                   class="pic1 col"
                   style="margin: -30px; max-width: 300px"
                 />
-                <img src="../logos/jquery0.png" class="pic1 col" style="margin: 0 0 0 30px"/>
+                <img
+                  src="../logos/jquery0.png"
+                  class="pic1 col"
+                  style="margin: 0 0 0 30px"
+                />
                 <img src="../logos/bootstrap.jpg" class="pic col" />
                 <img
                   src="../logos/figma.png"
-                  class="pic col"
+                  class="pic0 col"
                   style="margin: -40px"
                 />
                 <img src="../logos/material.png" class="pic col" />
-                <img src="../logos/handlebars.png" class="col pic" style="margin-left: 30px;" />
+                <img
+                  src="../logos/handlebars.png"
+                  class="col pic"
+                  style="margin-left: 30px"
+                />
+                <img src="../logos/aria.png" class="col pic" style="" />
               </div>
             </div>
           </div>
         </div>
         <div class="be-services-section be-section">
           <div class="fe-content">
-            <h1 class="fe-header">BACK-END ARCHITECTURE</h1>
+            <h1 class="fe-header">SERVER-SIDE ARCHITECTURE</h1>
             <p class="cs-blurb">
-              Providing full-featured Express.js server integration for seamless data retrieval and delivery, and  
-              sophisticated database architecture using RDBMS or NoSQL models for optimized data-storage. 
-              User accounts, authentication, unit-testing, custom APIs, password encryption, and cookie management.
+              Providing full-featured Express.js server integration for seamless
+              data retrieval and delivery. Sophisticated database
+              architecture using RDBMS or NoSQL models for optimized
+              data-storage. User accounts, authentication, unit-testing,
+              cookies, custom APIs, and password encryption.
             </p>
 
             <h2 class="fe-tech">TECHNOLOGIES</h2>
             <div class="container-fluid pt-5">
               <div
-                class="row fe-logos d-flex justify-content-center align-items-center sm-12 md-6"
+                class="
+                  row
+                  fe-logos
+                  d-flex
+                  justify-content-center
+                  align-items-center
+                  sm-12
+                  md-6
+                "
               >
                 <img src="../logos/node-js-icon.png" class="pic col" />
                 <img src="../logos/express1.png" class="pic col" />
-                <img
-                  src="../logos/mysql.png"
-                  class="pic col"
-                />
-                <img src="../logos/mongo1.png" class="pic0 col"/>
+                <img src="../logos/mysql.png" class="pic col" />
+                <img src="../logos/mongo1.png" class="pic0 col" />
                 <img src="../logos/npm.png" class="col pic" />
                 <img src="../logos/json1.png" class="pic col" />
                 <img
@@ -185,30 +220,82 @@
                 <img src="../logos/graph.png" class="col pic0" />
                 <img src="../logos/jest.png" class="pic1 col" />
                 <img src="../logos/wta.png" class="col pic" />
+                <img src="../logos/ajax.png" class="pic col" />
               </div>
             </div>
           </div>
         </div>
+
         <div class="services-section cs-section">
           <div class="fe-content">
             <h1 class="fe-header">COMPLETE SOLUTIONS</h1>
             <p class="fe-blurb">
-              Providing full-stack front-end/back-end integration and application deployment. 
+              Providing full-stack front-end/back-end integration, cloud
+              database management, version-control, and application deployment.
             </p>
 
             <h2 class="fe-tech">TECHNOLOGIES</h2>
             <div class="container-fluid pt-5">
               <div
-                class="row fe-logos d-flex justify-content-center align-items-center sm-12 md-6"
+                class="
+                  row
+                  fe-logos
+                  d-flex
+                  justify-content-center
+                  align-items-center
+                  sm-12
+                  md-6
+                "
               >
-                <img src="../logos/heroku.png" class="pic0 col" style="margin: -50px 0 0 -50px; max-height: 200" />
-                <img src="../logos/mern.png" class="pic0 col" style="margin-top: -50px"/>
+                <img
+                  src="../logos/heroku.png"
+                  class="pic0 col"
+                  style="margin: -50px 0 0 -50px; max-height: 200"
+                />
+                <img
+                  src="../logos/mern.png"
+                  class="pic0 col"
+                  style="margin-top: -50px"
+                />
                 <img
                   src="../logos/git.png"
                   class="pic1 col"
                   style="margin: -30px; max-width: 500px"
                 />
-                <img src="../logos/github.png" class="pic col"/>
+                <img src="../logos/github.png" class="pic col" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="personal-section cs-section">
+          <div class="fe-content">
+            <div
+              class="
+                row
+                fe-logos
+                d-flex
+                justify-content-center
+                align-items-center
+              "
+            >
+              <div class="col personal-blurb sm-12 md-6">
+                My approach to web development begins with thorough research,
+                followed by detailed concept development and design. You can
+                expect fast, tested, responsive, easy to use and intuitive 
+                full-stack applications.
+              </div>
+
+              <div class="col pic-col sm-12 md-6">
+                <img
+                  src="../media/IMG_E3942 (2).JPG"
+                  class="pic0 personal-pic col"
+                />
+              </div>
+            </div>
+            <div class="row">
+              <div class="button-col col">
+               <a href="contact.html"><div class="button button-1">CONTACT</a></div>
               </div>
             </div>
           </div>
