Updated About section personal blurb

--- a/pages/about.html
+++ b/pages/about.html
@@ -282,7 +282,7 @@
               <div class="col personal-blurb sm-12 md-6">
                 My approach to web development begins with thorough research,
                 followed by detailed concept development and design. You can
-                expect fast, tested, responsive, easy to use and intuitive 
+                expect fast, tested, responsive, easy-to-use and intuitive 
                 full-stack applications.
               </div>
 
