Modified UI/UX blurb

--- a/pages/about.html
+++ b/pages/about.html
@@ -124,7 +124,7 @@
             <p class="fe-blurb">
               Providing bespoke user-focused modern UI/UX design. Responsive
               mobile-first, fully interactive web applications built using powerful
-              languages, and the best tools and frameworks. Memorable
+              languages, tools and frameworks. Memorable
               user-experiences to build client relationships and drive key
               metrics.
             </p>
