changed complete solutions description

--- a/pages/about.html
+++ b/pages/about.html
@@ -230,8 +230,8 @@
           <div class="fe-content">
             <h1 class="fe-header">COMPLETE SOLUTIONS</h1>
             <p class="fe-blurb">
-              Providing full-stack front-end/back-end integration, cloud
-              database management, version-control, and application deployment.
+              Providing front-end/back-end integration, version-control, cloud
+              database management, and application deployment.
             </p>
 
             <h2 class="fe-tech">TECHNOLOGIES</h2>
