Changed opening phrase

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="content">
         <div class="inner">
           <div class="headline-wrapper">
-          <h1 class="headline deliver">DELIVER A SUPERIOR</h1>
+          <h1 class="headline deliver">DELIVER A MODERN</h1>
           <h1 class="headline experience">WEB EXPERIENCE</h1>
         </div>
           <div class="button-container">
