modified about UI/UX blurb

--- a/pages/about.html
+++ b/pages/about.html
@@ -125,7 +125,8 @@
               Providing bespoke user-focused modern UI/UX design. Responsive
               mobile-first, fully interactive web applications built using powerful
               languages, tools and frameworks. Memorable
-              user-experiences to build client relationships and drive key
+              user-experiences to enhance user engagement, 
+              build client relationships, and drive key
               metrics.
             </p>
 
