--- a/pages/about.html
+++ b/pages/about.html
@@ -231,7 +231,7 @@
           <div class="fe-content">
             <h1 class="fe-header">COMPLETE SOLUTIONS</h1>
             <p class="fe-blurb">
-              Providing front-end/back-end integration, version-control, cloud
+              Providing full-stack integration, version-control, cloud
               database management, and application deployment.
             </p>
 
