--- a/pages/about.html
+++ b/pages/about.html
@@ -217,6 +217,7 @@
                   class="pic0 col"
                   style="margin: -40px"
                 />
+                <img src="../logos/axios.png" class="col pic0" />
                 <img src="../logos/graph.png" class="col pic0" />
                 <img src="../logos/jest.png" class="pic1 col" />
                 <img src="../logos/wta.png" class="col pic" />
