updated linkedin link

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -93,7 +93,7 @@
       <div class="contact">
         <h1 class="header">CONTACT</h1>
         <div class="icons">
-          <a href="https://oracle942.github.io/Web-Dev-Portfolio/" target = "_blank"> <i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/sanchezwebdev/" target = "_blank"> <i class="bi bi-linkedin"></i></a>
           <a href="https://github.com/oracle942" target = "_blank"><i class="bi bi-github"></i></a>
         <a href="https://twitter.com/numinouscode" target = "_blank"><i class="bi bi-twitter"></i></a>
         <a href="mailto:oracle942@gmail.com"><i class="bi bi-envelope"></i></a>
