increased stroke width

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -96,7 +96,7 @@
           <a href="https://www.linkedin.com/in/sanchezwebdev/" target = "_blank"> <i class="bi bi-linkedin"></i></a>
           <a href="https://github.com/oracle942" target = "_blank"><i class="bi bi-github"></i></a>
         <a href="https://twitter.com/numinouscode" target = "_blank"><i class="bi bi-twitter"></i></a>
-        <a href="mailto:oracle942@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="mailto:sanchezwebdev@gmail.com"><i class="bi bi-envelope"></i></a>
         <a href="https://docs.google.com/document/d/1OwzZzqCRPQMq6j-6Fw8D2yg2M_-q08pFZO61wNdNMvA/edit?usp=sharing" target = "_blank"><i class="bi bi-person-square"></i></a>
       </div>
       </div>
