changed about section to services. made social section now about section

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -52,7 +52,7 @@
               </li>
               <li class="nav-item">
                 <a href="about.html" class="nav-link btn from-left text-light"
-                  >About</a
+                  >Services</a
                 >
               </li>
               <li class="nav-item">
@@ -62,7 +62,7 @@
               </li>
               <li class="nav-item">
                 <a href="social.html" class="nav-link btn from-right text-light"
-                  >Social</a
+                  >About</a
                 >
               </li>
               <li class="nav-item">
