--- a/pages/social.html
+++ b/pages/social.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="../style/buttons.css" />
     <link rel="stylesheet" href="../style/logo.css" />
     <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../style/contactbtn.css" />
+    <link rel="stylesheet" href="../style/aboutstyle.css" />
+
     <title>Sanchez Web Solutions</title>
   </head>
   <body>
@@ -54,7 +57,7 @@
               </li>
               <li class="nav-item">
                 <a href="about.html" class="nav-link btn from-left text-light"
-                  >About</a
+                  >Services</a
                 >
               </li>
               <li class="nav-item">
@@ -64,7 +67,7 @@
               </li>
               <li class="nav-item">
                 <a href="social.html" class="nav-link btn from-right text-light"
-                  >Social</a
+                  >About</a
                 >
               </li>
               <li class="nav-item">
@@ -90,9 +93,38 @@
         autoplay
       ></video>
 
-      <div class="social">
-        <h1 class="coming-soon">COMING SOON</h1>
-      
+      <div class="personal-section cs-section" style="padding-top: 100px;">
+        <div class="fe-content">
+          <div
+            class="
+              row
+              fe-logos
+              d-flex
+              justify-content-center
+              align-items-center
+            "
+          >
+            <div class="col personal-blurb sm-12 md-6">
+              My name is Gerardo Sanchez.
+              My approach to web development begins with thorough research,
+              followed by detailed concept development and design. You can
+              expect fast, tested, responsive, easy-to-use and intuitive 
+              full-stack applications.
+            </div>
+
+            <div class="col pic-col sm-12 md-6">
+              <img
+                src="../media/IMG_E3942 (2).JPG"
+                class="pic0 personal-pic col"
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="button-col col">
+             <a href="contact.html"><div class="button button-1">CONTACT</a></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- End Main -->
