--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </li>
               <li class="nav-item">
                 <a href="./pages/about.html" class="nav-link btn from-left text-light"
-                  >About</a
+                  >Services</a
                 >
               </li>
               <li class="nav-item">
@@ -61,7 +61,7 @@
               </li>
               <li class="nav-item">
                 <a href="./pages/social.html" class="nav-link btn from-right text-light"
-                  >Social</a
+                  >About</a
                 >
               </li>
               <li class="nav-item">
