--- a/pages/about.html
+++ b/pages/about.html
@@ -54,7 +54,7 @@
               </li>
               <li class="nav-item">
                 <a href="about.html" class="nav-link btn from-left text-light"
-                  >About</a
+                  >Services</a
                 >
               </li>
               <li class="nav-item">
@@ -64,7 +64,7 @@
               </li>
               <li class="nav-item">
                 <a href="social.html" class="nav-link btn from-right text-light"
-                  >Social</a
+                  >About</a
                 >
               </li>
               <li class="nav-item">
@@ -122,6 +122,7 @@
           <div class="fe-content">
             <h1 class="fe-header">UI/UX DESIGN</h1>
             <p class="fe-blurb">
+
               Providing bespoke user-focused modern UI/UX design. Responsive
               mobile-first, fully interactive web applications built using powerful
               languages, tools and frameworks. Memorable
@@ -269,38 +270,7 @@
           </div>
         </div>
 
-        <div class="personal-section cs-section">
-          <div class="fe-content">
-            <div
-              class="
-                row
-                fe-logos
-                d-flex
-                justify-content-center
-                align-items-center
-              "
-            >
-              <div class="col personal-blurb sm-12 md-6">
-                My approach to web development begins with thorough research,
-                followed by detailed concept development and design. You can
-                expect fast, tested, responsive, easy-to-use and intuitive 
-                full-stack applications.
-              </div>
-
-              <div class="col pic-col sm-12 md-6">
-                <img
-                  src="../media/IMG_E3942 (2).JPG"
-                  class="pic0 personal-pic col"
-                />
-              </div>
-            </div>
-            <div class="row">
-              <div class="button-col col">
-               <a href="contact.html"><div class="button button-1">CONTACT</a></div>
-              </div>
-            </div>
-          </div>
-        </div>
+       
       </div>
     </div>
     <!-- End Main -->
