--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,7 +53,7 @@
               </li>
               <li class="nav-item">
                 <a href="about.html" class="nav-link btn from-left text-light"
-                  >About</a
+                  >Services</a
                 >
               </li>
               <li class="nav-item">
@@ -63,7 +63,7 @@
               </li>
               <li class="nav-item">
                 <a href="social.html" class="nav-link btn from-right text-light"
-                  >Social</a
+                  >About</a
                 >
               </li>
               <li class="nav-item">
