changed design to development

--- a/pages/about.html
+++ b/pages/about.html
@@ -120,10 +120,10 @@
         </div>
         <div class="services-section fe-section">
           <div class="fe-content">
-            <h1 class="fe-header">UI/UX DESIGN</h1>
+            <h1 class="fe-header">UI/UX DEVELOPMENT</h1>
             <p class="fe-blurb">
 
-              Providing bespoke user-focused modern UI/UX design. Responsive
+              Providing bespoke user-focused modern UI/UX developtment. Responsive
               mobile-first, fully interactive web applications built using powerful
               languages, tools and frameworks. Memorable
               user-experiences to enhance user engagement, 
