--- a/pages/about.html
+++ b/pages/about.html
@@ -101,7 +101,7 @@
           <input type="radio" name="slider" id="item-3" />
           <div class="cards">
             <label class="card" for="item-1" id="card1">
-              <h1 class="card-header1">UI/UX DESIGN</h1>
+              <h1 class="card-header1">UI/UX DEVELOPMENT</h1>
               <img
                 src="https://images.unsplash.com/photo-1515462277126-2dd0c162007a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=688&q=80"
               />
